
Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
------------------------------

Apache Solr integration 7.x-1.0-xxxx, 2011-xx-xx
------------------------------
#1265124 by InternetDevels.Com: Fixed Not output pager in search results.
#1324842 by Nick_vh: Added setAvailableSorts to the api.
#1000532 by craigmc, jpmckinney: Fixed Non-current/valid Node Types not excluded from index.
#1320906 by Nick_vh | brianV: Fixed Taxonomy Search page title should be dynamic based on term.
#1320076 by Nick_vh | egarias: Fixed Results per page should be non-negative integer less than 200.
#1320634 by Nick_vh | jummonk: Fixed Search pages saved in static array before they are created in DB => PDO exception on creation of menu_router() records.
#1319542 by jgalletta: Fixed Undefined index: get in apachesolr_search_user_defined_search_form_submit().
#1313698 by Nick_vh, denikin: Fixed Support for search of date content in facets/fields
#1316578 by Nick_vh | rooby: Added some documentation somewhere that says you need the facetapi module for facets.


Apache Solr integration 7.x-1.0-beta10, 2011-10-19
------------------------------
#1312718 by pwolanin: fix for menu rebuild problems when installing apachesolr_search.
#1134610 by pcambra, JoeMcGuire, Ravi.J: schema support for ctools export of settings.
#1314664 by Nick_vh, brianV: fix for Search pages completely ignore the title set in the configuration.
#1314260 by Nick_vh: Fixed hook_apachesolr_query_prepare() not also correctly documented.
#1313698 by Nick_vh, denikin: Fixed Support for search of multiword content in facets/fields .
#1309572 by Nick_vh: Fixed Creating new search page gives error when trying to find the search page variable.
#1204480 by Nick_vh | chriscalip: Fixed Please update apachesolr.api.php naming convention from HOOK_ to hook_.
#1212610 by Nick_vh: Fixed Notice: Undefined index: module in apachesolr_search_form_search_form_alter().